Fix top nav z-index

--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -205,12 +205,6 @@ section {
 	.client-row {
 		margin-bottom: 10px;
 	}
-
-/*
-	.client-logo-container {
-		width: 19%;
-	}
-	*/
 }
 
 // Fix spacing
